--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="es-ES">
 <head>
   <meta charset="utf-8">
-  <title>MyPageAngular</title>
+  <title>Roi Baldomir</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap'); /* Fuente principal */
+  </style>
 </head>
-<body>
+<body class="bg-light">
   <app-root></app-root>
 </body>
 </html>
